Added login page, login / auth logic not yet implemented

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
         <a href="/" id="page-title">findr</a>
         <div>
             <button href="/signup" class="nav-item">Sign up</button>
-            <button href="/login" class="nav-item">Login</button>
+            <a href="/login" class="nav-item" id="login-btn">Login</a>
         </div>
     </div>
 
